--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Bagus Site
 email: ilman.bagus@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Just another generic site
-baseurl: "/blog/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://bagusilman.com" # the base hostname & protocol for your site
 twitter_username: ilmanbag
 github_username:  bagusilman
