--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Bagus Site
+title: Bagus' Site
 email: ilman.bagus@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Just another generic site
